# plutus-core-semantics

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  TODO  Test  activate  bitstream.md  build  build.ninja  bytestring-builtins.md  bytestring.md  contract-compile  contract-prove  crypto-builtins.md  env.md  flake.nix  integer-builtins.md  issues.md  k-script  kast_all.sh  kplc  kplutus  kplutus-covr  no-hits.py  plutus-core-spec.k  plutus-core-spec.md  plutus-core.k  plutus-core.md  polymorphic-builtins.md  print2  requirements.txt  sum-to-10-spec.k  typing-tests.md  typing.md  unit-tests.md  (+29 more)
.github/workflows/: Dockerfile  test-pr.yml  update-version.yml
Documentation/: Milestone_2_CEK_Optimizations.md  friendly-uplc.md
IOG-contracts/: README.md  cabal.project
IOG-contracts/native-tokens/: README.md  cabal.project  native-tokens.cabal
IOG-contracts/stablecoin/: README.md  cabal.project  stablecoin.cabal
IOG-contracts/stablecoin/stablecoin/: stablecoin.cabal
IOG-contracts/stablecoin/stablecoin/out_scripts/: stablecoinPolicy.pir
IOG-contracts/stablecoin/stablecoin/src/Contracts/: Stablecoin.hs
binsearch/: README.md  binsearch-unit-test.md  binsearch.md  verification.md
editor-support/emacs/: README.md  uplc-mode.el
ext/blockchain-k-plugin/: .gitmodules
ext/kninja/: __init__.py  prelude.ninja
kick-off-meeting/: Makefile  kick-off.md
kplutus-pyk/: .cruft.json  README.md  pyproject.toml
kplutus-pyk/src/kplutus_pyk/: __main__.py  genv.py  kplutus.py
kplutus-pyk/src/tests/: test_kplutus_pyk.py
kplutus_pyk/: Makefile  README.md  pyproject.toml  setup.cfg
legacy/: plutus-core.md  sum-to-10-spec.k  typing.md  unit-tests.md  verification.md
lib/: build.ninja  build.py
native-tokens/: README.md  cabal.project
native-tokens/native-tokens/: CompiledPolicyFalseNames.uplc  CompiledPolicyTrueNames.uplc  ContractFreeRaw.text  free-1-decoded-bytestrings.uplc  native-tokens.cabal  nft.uplc
native-tokens/native-tokens/out_scripts/: NFT-1.flat  NFT-1.flat.uplc  NFT-2.flat  NFT-2.flat.uplc  free-1.flat  free-1.uplc  free-2.flat  free-2.flat.uplc  free-3.flat  free-3.flat.uplc
native-tokens/native-tokens/src/Contracts/: Free.hs  NFT.hs
native-tokens/native-tokens/test/: Main.hs
native-tokens/native-tokens/test/Spec/: Free.hs  NFT.hs
nix/: kplc.patch
plugin/: HASH.ml  KRYPTO.ml  caching.ml  caching.mli  world.ml  world.mli
simple-proofs/: datatype-abstractions.md  list-algorithms.md  list-free.md  list-length.md  list-longer.md  list-max.md  list-sum.md  simple-symbolic.md  trivial-policies.md  trivial-policy-false.md  verification.k  verification.md
simple-proofs/list-algorithms/: list-algorithms-claims.md  list-algorithms.k
simple-proofs/uplc-to-k/: tokens.uplc
src/: Prelude-supported.plc  plutus-core-execution.k  plutus-core-syntax.k  plutus-core-typing.k  plutus-core.k  plutus-lib.k  syntax.k
src/erc20/: erc20.k  plutus-core-execution.k
src/execution/: erc20.k  hex-conversion.k  plutus-core-execution.k  plutus-core-syntax.k  plutus-core.k
src/translation/: NOTES  iele-syntax.k  imp-syntax.k  plutus-core-syntax.k  plutus-core-translation.k  plutus-core.k  plutus-runtime.iele  scheme-to-c.scm
src/typing/: plutus-core-typing.k
stablecoin/: README.md
t/: 11-scott-to-int.plc  11-scott-to-int.plc.expected  11-scott-to-int.plc.java.expected  11-scott-to-int.plc.ocaml.expected  builtin-app.plc  builtin-app.plc.expected  bytestring.plc  bytestring.plc.java.expected  bytestring.plc.ocaml.expected  church-zero.plc  fact.plc  factorial.plc  factorial.plc.expected  fibonacci.plc  if-then-else.plc  if-then-else.plc.expected  if-then-else.plc.java.expected  lambda-app.plc  lazy.plc  sha2.plc  sha2.plc.java.expected  sha2.plc.ocaml.expected  sha3.plc  sha3.plc.java.expected  sha3.plc.ocaml.expected  succ-integer.plc  sum-list.plc  sum-list.plc.expected  sum-list.plc.java.expected  sum-list.plc.ocaml.expected  sum-to-10.plc  sum-to-10.plc.java.expected  sum-to-10.plc.ocaml.expected  sum.plc  sum.plc.expected  y-fact.plc  y-fact.plc.expected  y-sum.plc  y-sum.plc.java.expected
t/typing/: add-integer.plc  case.plc  (+26 more)
test/: CraftOfFP-supported.plc  CraftOfFP.plc  app-1.plcore  app-1.plcore.out  app-2.plcore  app-2.plcore.out  app-3.plcore  app-3.plcore.out  app.plcore  application.plc  arith-ops.plc  bind.plcore  bool.plcore  bool.plcore.out  bytestring-1.plcore  bytestring-1.plcore.out  bytestring.plc  case-simple.plc  ceil.plcore  ceil.plcore.out  church-numeral-1.plcore  church-numeral-1.plcore.out  cmp-ops.plc  comparison.plcore  comparison.plcore.out  concatenate.plcore  concatenate.plcore.out  config.xml  constructor-1.plcore.out  constructor-2.plcore.out  constructor-3.plcore  constructor-3.plcore.out  ctor-case.plc  ctor-duplicate.plc  debug.sh  define.plcore  define.plcore.out  drop.plcore  drop.plcore.out  equality.plcore  (+79 more)
tests/: bytestring.plc.java.expected  bytestring.plc.ocaml.expected  failing  sha2.plc.ocaml.expected  sha3.plc.java.expected  sha3.plc.ocaml.expected  succ-integer.plc.expected  sum-list.plc.expected  sum-to-10.plc.expected
unit-tests/: cbor-unit-test.md  flat-unit-test.md  verification.k
verification/: PreludeTestSuite.plc  applyTo-no-prelude_spec.k  applyTo_spec.k  compose-no-prelude_spec.k  compose.plcore  compose2-no-prelude_spec.k  compose_spec.k  const-neg_spec.k  const.plc  const.plcore  const_spec.k  curry-no-prelude_spec.k  curry_spec.k  dummy.plcore  either-left_spec.k  either-right_spec.k  either.plcore  eitherToMaybe-left_spec.k  eitherToMaybe-right_spec.k  eqmaybe.plcore  equality.plcore  equality_spec.k  flip-equalsInt_spec.k  flip-no-prelude_spec.k  flip.plcore  flip_spec.k  float-addition.plcore  float-addition_spec.k  fromJust_spec.k  fromMaybe-just_spec.k  fromMaybe-nothing_spec.k  fst-neg_spec.k  fst.plcore  fst_spec.k  id.plcore  id_spec.k  inequality_spec.k  int-addition-lib.plcore  int-addition-with-import_spec.k  int-addition.plcore  (+21 more)
vm/: VM.ml  ieleApi.ml  ieleApiClient.ml  ieleClientUtils.ml  ieleTestClient.ml  ieleVmTest.ml  vmNetworkServer.ml
(+1090 files in other folders)
