Cabal-Version:      2.4
Name:               native-tokens
Version:            0.1.0.0
Author:              
Maintainer:          
Build-Type:         Simple
Copyright:           
License:             
License-files:       

executable native-tokens-scripts
  main-is:             Main.hs
  hs-source-dirs:      test, src
  default-language:    Haskell2010
  default-extensions:  ImportQualifiedPost
  exposed-modules:     Contracts.Free
                     , Contracts.NFT
                     , Spec.Free
                     , Spec.NFT
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , prettyprinter ^>=1.7.1
                     , plutus-core ^>=0.1.0.0
                     , prettyprinter-configurable ^>=0.1.0.0
                     , optparse-applicative ^>=0.16.1.0
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas 
                       -fno-omit-interface-pragmas -fno-strictness 
                       -fno-spec-constr -fno-specialise
                       -fplugin-opt PlutusTx.Plugin:no-simplifier-inline
                       -fplugin-opt PlutusTx.Plugin:no-simplifier-beta
