cabal-version:   2.0
name:            stablecoin
version:         0.1.0.0
license:         
license-file:    
maintainer:      
author:          
stability:       experimental
synopsis:


description:


category:        Language
build-type:      Simple
extra-doc-files: README.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

library
  exposed-modules:
    Contracts.Stablecoin

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    
  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -- -fplugin-opt PlutusTx.Plugin:no-optimize
    -- -fplugin-opt PlutusTx.Plugin:no-simplifier-inline
    -- -fplugin-opt PlutusTx.Plugin:no-simplifier-beta
--    -fplugin-opt PlutusTx.Plugin:no-simplifier-remove-dead-bindings
    -fplugin-opt PlutusTx.Plugin:max-simplifier-iterations=0
    -fmax-simplifier-iterations=0    
    -fforce-recomp
    
  --------------------
  -- Local components
  --------------------
  build-depends:
--      playground-common
--  ,
--      plutus-chain-index-core
--    ,
    plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-constraints
    , plutus-script-utils

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
      plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      aeson
    , base
--    , bytestring
    , containers
--    , freer-simple
--    , hashable
    , lens
--    , openapi3
--    , prettyprinter
--    , semigroups
--    , streaming
    , template-haskell
    , text
--    , tasty >=1.4.2

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors


-- runs emulator traces from plutus-use-cases-tests and
-- writes all applied validator scripts to a folder
executable stablecoin-scripts
  main-is:            Main.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost 
  other-modules:
    Spec.Stablecoin
    
  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -rtsopts -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fplugin-opt PlutusTx.Plugin:no-optimize

  --------------------
  -- Local components
  --------------------
  build-depends:
      freer-extras
    , plutus-contract
    , plutus-contract-certification
    , plutus-ledger
    , plutus-ledger-constraints
    , plutus-script-utils
    , plutus-use-cases
    , stablecoin                
  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
      cardano-api
    , plutus-ledger-api
    , plutus-tx
    , plutus-core

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      base                  >=4.9 && <5
    , bytestring
    , containers
    , data-default
    , foldl
    , freer-simple
    , lens
    , mtl
    , optparse-applicative
--    , prettyprinter
    , QuickCheck
--    , streaming
    , tasty
    , tasty-golden
    , tasty-hunit
    , tasty-quickcheck
    , text
    , filepath